# qr-prototype

./: .gitignore  CMakeLists.txt  SIFT.py  SIFT_area.py  binary_threshold.py  crop.py  cropped_qr_test.py  dynamic_template_matching.py  error_analysis.py  error_analysis_single_camera.py  error_analysis_stereo.py  error_analysis_stereo_a.py  error_analysis_stereo_x_minus_x'.py  get_coordinates.py  main.cpp  new_stereo_analysis.py  qrcode_detection.py  qrcode_detection_stable.py  qrcodereader.py  sharpen.py  stereo_analysis.py  stereo_analysis_only_points_satisfying.py  stream.py  template_homography.py  template_matching.py  template_matching_stable.py
my_env/: pyvenv.cfg
